# Minecraft

./: CMakeLists.txt  Camera.cpp  Camera.h  Config.h  Context.cpp  Context.h  Entity.h  Game.cpp  Game.h  Main.cpp  Mesh.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h
Renderer/: ChunkRenderer.cpp  ChunkRenderer.h  CubeRenderer.cpp  CubeRenderer.h  RenderInfo.h  RenderMaster.cpp  RenderMaster.h
Shaders/: BasicShader.cpp  BasicShader.h  ChunkShader.cpp  ChunkShader.h  Shader.cpp  Shader.h
Textures/: BasicTexture.cpp  BasicTexture.h  CubeTexture.cpp  CubeTexture.h  TextureAtlas.cpp  TextureAtlas.h
Util/: NonCopyable.h  NonMovable.h  Random.cpp  Random.h  Singleton.h
World/: WorldConstants.h
World/Block/: BlockData.cpp  BlockData.h  BlockDataBase.cpp  BlockDataBase.h  BlockId.h  ChunkBlock.cpp  ChunkBlock.h
World/Block/BlockTypes/: BlockType.cpp  BlockType.h
glad/include/glad/: glad.h
glad/src/: glad.c
resources/blocks/: cactus.block  oakBark.block
resources/shaders/: basic.vert  chunk.frag  chunk.vert  cube.vert
